2006-08-01  Daniel Jacobowitz  <dan@codesourcery.com>

	* c-exp.y (type): Remove incorrect pointer to member case.
	* objc-exp.y (type): Likewise.
	* p-exp.y (type): Likewise.

2006-08-01  Mark Kettenis  <kettenis@gnu.org>

	* arm-tdep.h (enum struct_return): New.
	(struct gdbarch_tdep): Add struct_return member.
	* arm-tdep.c (arm_return_value): Return
	RETURN_VALUE_STRUCT_CONVENTION for aggregates when the ABI uses
	pcc_struct_return.
	(arm_gdbarch_init): Default to reg_struct_return.
	* armobsd-tdep.c (armobsd_init_abi): Set pcc_struct_return.

2006-07-31  Mark Kettenis  <kettenis@gnu.org>

	* alpha-tdep.h (ALPHA_S0_REGNUM): New define.
	* alphabsd-nat.c: Include <sys/types.h>, <sys/signal.h>,
	<machine/pcb.h> and "bsd-kvm.h".
	(alphabsd_supply_pcb): New function.
	(_initialize_alphabsd_nat): Enable libkvm interface.
	* Makefile.in (alphabsd-nat.o): Update dependencies.
	* config/alpha/fbsd.mh (NATDEPFILES): Add bsd-kvm.o.
	(LOADLIBES): New variable.
	* config/alpha/nbsd.mh (NATDEPFILES): Add bsd-kvm.o.
	(LOADLIBES): New variable.

2006-07-31  Fred Fish  <fnf@specifix.com>

	* arm-tdep.c (arm_make_prologue_cache): Use FRAME_OBSTACK_ZALLOC
	instead of calling frame_obstack_zalloc directly.
	(arm_make_stub_cache): Ditto.
	* frame-unwind.h: Ditto.
	* frame.c (create_new_frame): Ditto.

2006-07-27  Bob Wilson  <bob.wilson@acm.org>

	* MAINTAINERS (Write After Approval): Add myself.

2006-07-27  Bob Wilson  <bob.wilson@acm.org>

	* main.c (captured_main): Print a newline after calling
	print_gdb_version instead of waiting until after the symbol file
	has been read.  Adjust error_pre_print, quit_pre_print, and
	warning_pre_print values.

2006-07-27  Roger Sayle  <roger@eyesopen.com>
	    Daniel Jacobowitz  <dan@codesourcery.com>

	* irix5-nat.c (fetch_core_registers): Simplify and correct logic.

2006-07-27  Daniel Jacobowitz  <dan@codesourcery.com>

	* target.h (target_read_stralloc): New prototype.
	* target.c (target_read_alloc_1): Renamed from target_read_alloc.