@@ -1,3 +1,9 @@
+2006-08-02  Thiemo Seufer  <ths@mips.com>
+
+	* linux-thread-db.c (thread_db_get_thread_local_address): Fix type
+	mismatch.
+	* tui/tui-stack.c (tui_show_frame_info): Likewise.
+
 2006-08-01  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* c-exp.y (type): Remove incorrect pointer to member case.
